# ssssearch

./: LICENSE  README.md  justfile  main.py  pyproject.toml
benchmark/: benchmark.ipynb  qa.csv  qa_result.csv
src/scraper/: __init__.py  cache.py  chunker.py  crawler.py  fetcher.py  indexer.py  scraper.py  types.py
src/utils/: date.py  hash.py  href.py  html.py
